--- a/DataHaven 3 - Single Moms .ipynb
+++ b/DataHaven 3 - Single Moms .ipynb
@@ -10,6 +10,7 @@
     "- Could I have access to the number of adults living in a household as well? \n",
     "- Does this analysis seem sound to you? Noted under subheds when the comparison is with a subset of the total survey sample (eg that the childcare question was only asked of those with children, etc. There are some questions under subheds too where I've been unsure) I have matched the overall estimates with the weighted data you sent me in each estimate to make sure I'm doing the analysis right.\n",
     "- I seem to remember that you saying that underemployment was calculated based on two questions. (Or was it health insurance coverage?)\n",
+    "- On that note, I'm a little confused by the follow up questions to the \"Do you have health insurance question\". How would I ascertain whether or not someone is undercovered?\n",
     "- Are there other well-being surveys that you'd recommend comparing these results with for pre-pandemic figures?\n",
     "- Do you do an equivalent survey of children/ does anyone in the state?"
    ]
@@ -46,7 +47,7 @@
     "        - How often?\n",
     "        - Have you struggled to house yourself and your family in the past 12 months?\n",
     "    - IV. Childcare\n",
-    "        - Have you or any adults in your life found it more difficult to handle childcare responsibilities?\n",
+    "        - Have you or any adults in your household found it more difficult to handle childcare responsibilities?\n",
     "    - V. Health Insurance"
    ]
   },
